[gd_scene load_steps=6 format=3 uid="uid://c0svli45cjmsm"]

[ext_resource type="Script" path="res://Escenas/Horno/horno.gd" id="1_e16b3"]
[ext_resource type="Texture2D" uid="uid://bqjqpati2ea0g" path="res://Sprites/Mapa/hornito.png" id="1_yyhpw"]
[ext_resource type="Texture2D" uid="uid://xemsjtn0mmoe" path="res://Sprites/flecha arriba.png" id="3_bvap7"]
[ext_resource type="AudioStream" uid="uid://dreskpl5ovjky" path="res://Musica/Horno.mp3" id="4_kwyb0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ck0i"]
size = Vector2(16, 16)

[node name="Horno" type="Node2D"]
script = ExtResource("1_e16b3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.4, 1.4)
texture = ExtResource("1_yyhpw")

[node name="Spr_up_key_ladder" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -18)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_bvap7")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_5ck0i")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_kwyb0")
pitch_scale = 0.6

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
